all blog page published

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.project.androidproject">
 
-    //uses permissions
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,11 +14,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidProject">
+        <activity
+            android:name=".coorg"
+            android:exported="false" />
+        <activity
+            android:name=".gokarna"
+            android:exported="false" />
+        <activity
+            android:name=".hampi"
+            android:exported="false" />
+        <activity
+            android:name=".mangalore"
+            android:exported="false" />
+        <activity
+            android:name=".jogFalls"
+            android:exported="false" />
+        <activity
+            android:name=".nandiHills"
+            android:exported="false" />
+        <activity
+            android:name=".udupi"
+            android:exported="false" />
+        <activity
+            android:name=".chikmangalur"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
